--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,13 @@ jobs:
           PKL_EXEC=$(pwd)/pkl.bin swift test
     docker:
     - image: swift:5.9
+  test-license-headers:
+    steps:
+    - checkout
+    - run:
+        command: /bin/hawkeye check --fail-if-unknown
+    docker:
+    - image: ghcr.io/korandoru/hawkeye
 workflows:
   prb:
     jobs:
@@ -25,6 +32,9 @@ workflows:
     - test:
         requires:
         - hold
+    - test-license-headers:
+        requires:
+        - hold
     when:
       matches:
         value: << pipeline.git.branch >>
@@ -32,6 +42,7 @@ workflows:
   main:
     jobs:
     - test
+    - test-license-headers
     when:
       equal:
       - main
