--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ name: Build
     branches-ignore:
     - main
     - release/*
+    - dependabot/**
     tags-ignore:
     - '**'
 concurrency:
@@ -19,11 +20,13 @@ jobs:
     steps:
     - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
       with:
+        ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || '' }}
         persist-credentials: false
         fetch-depth: 0
+    - run: git config --global --add safe.directory $(pwd)
     - run: hawkeye check --config licenserc.toml --fail-if-unknown
     container:
-      image: ghcr.io/korandoru/hawkeye@sha256:c3ab994c0d81f3d116aabf9afc534e18648e3e90d7525d741c1e99dd8166ec85
+      image: ghcr.io/korandoru/hawkeye@sha256:e0abf8dbfaeeeba1249679d662d9fb404b1dcdb041c6093ea1f7a6edb7d89319
   test-buildtimeeval:
     name: Test buildtimeeval
     runs-on: ubuntu-latest
